[gd_scene load_steps=2 format=3 uid="uid://c8g60e8jn4rge"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_owimu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owimu")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 124.0
offset_right = 258.0
offset_bottom = 174.0
text = "HOST"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 124.0
offset_right = 461.0
offset_bottom = 174.0
text = "JOIN"

[node name="PlayersList" type="Label" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 96.0
offset_right = 692.0
offset_bottom = 178.0
text = "Players list:
"

[node name="NickEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 119.0
offset_top = 17.0
offset_right = 283.0
offset_bottom = 55.0
placeholder_text = "NICK"
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 206.0
offset_right = 254.0
offset_bottom = 264.0
text = "START GAME"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
